--- a/index.html
+++ b/index.html
@@ -26,30 +26,7 @@
       <a href="#gallery">gallery</a>
       <a href="#doctors">doctors</a>
       <a href="#about">about</a>
-      <a href="" class="dropbtn">services</a>
-        <div class="dropdown-content">
-          <a href="#service1">Service 1</a>
-          <a href="#service2">Service 2</a>
-          <a href="#service3">Service 3</a>
-          <a href="#service4">Service 4</a>
-          <a href="#service5">Service 5</a>
-          <a href="#service6">Service 6</a>
-          <a href="#service7">Service 7</a>
-          <a href="#service8">Service 8</a>
-          <a href="#service9">Service 9</a>
-          <a href="#service10">Service 10</a>
-          <a href="#service11">Service 11</a>
-          <a href="#service12">Service 12</a>
-          <a href="#service13">Service 13</a>
-          <a href="#service14">Service 14</a>
-          <a href="#service15">Service 15</a>
-          <a href="#service16">Service 16</a>
-          <a href="#service17">Service 17</a>
-          <a href="#service18">Service 18</a>
-          <a href="#service19">Service 19</a>
-          <a href="#service20">Service 20</a>
-          <a href="#service21">Service 21</a>
-        </div>
+      <a href="#service">services</a>
       <a href="#contact">contact</a>
       <a href="#review">reviews</a>
       <a href="#timings">timings</a>
