Your commit message

--- a/services/service2.html
+++ b/services/service2.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eye testing</title>
-  <link rel="stylesheet" href="service1.css">
+  <title>Intraocular Lens Implantation</title>
+  <link rel="stylesheet" href="service2.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
@@ -37,8 +37,8 @@
        <!-- Main Section -->
   <main>
     <section class="service-hero">
-      <h1 class="heading">Computerised Eye Testing Service</h1>
-      <p>Eye Testing Service at Nalanda Netralaya provides precise, non-invasive eye exams using advanced technology for accurate diagnosis and care.</p>
+      <h1 class="heading">Intraocular lens implantation</h1>
+      <p>"Intraocular Lens Implantation is a revolutionary procedure that restores clear vision by replacing the eye's natural lens with an artificial one."</p>
       <img src="https://img.freepik.com/free-photo/medium-shot-woman-getting-her-eyes-checked_23-2150801430.jpg?t=st=1725690796~exp=1725694396~hmac=70c57de1c8a3c61b583cda1bd44965dfc586d289abffc4d587c87629a4d6b992&w=996" alt="Cardiology Department">
     </section>
 
@@ -48,14 +48,54 @@
     <section class="service-details">
         <div class="service-details-container">
             <div class="service-info">
-              <h3 class="service-sub-head">About Our Computerised Eye Testing Service</h3>
-              <p>Computerised Eye Testing at Nalanda Netralaya offers precise, non-invasive, and efficient diagnosis of vision problems and eye health. Using advanced technology, we provide quick and accurate assessments to ensure early detection of conditions like myopia, hyperopia, and more, ensuring personalized care for every patient.</p>
+              <h3 class="service-sub-head">About Our lens implantation</h3>
+              <p>At Nalanda Netralaya, Intraocular Lens Implantation is a specialized procedure designed to treat cataracts and improve vision clarity. Our experienced surgeons replace the clouded natural lens of the eye with a high-quality artificial intraocular lens (IOL), offering patients a lasting solution to visual impairment. This procedure ensures minimal discomfort, rapid recovery, and significant improvement in vision, helping individuals regain their independence and quality of life.</p>
             </div>
             <div class="service-image">
-              <img src="https://img.freepik.com/free-vector/organic-flat-online-medical-conference-illustration_23-2148892743.jpg?t=st=1725691681~exp=1725695281~hmac=4e7bb122acba021a018a5b460bebce9d53ef8c4c1336c0bfa3e8db4ab8abab66&w=740" alt="Cardiology Team">
+              <img src="https://img.freepik.com/premium-vector/extraocular-muscles-anatomy_206049-8262.jpg?uid=R162255660&ga=GA1.1.417559460.1724817258&semt=ais_hybrid" alt="Cardiology Team">
             </div>
           </div>
     </section>
+
+
+<!-- implantation process -->
+
+<section class="procedure-section">
+    <div class="container">
+      <h2>The Procedure</h2>
+      <p>Intraocular Lens Implantation is a highly effective procedure to restore vision for those suffering from cataracts or other eye conditions. Below is a step-by-step guide to the procedure.</p>
+  
+      <div class="steps">
+        <!-- Step 1: Pre-Surgery Preparation -->
+        <div class="step-card">
+          <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Pre-Surgery">
+          <div class="step-info">
+            <h3>Step 1: Pre-Surgery Preparation</h3>
+            <p>Patients will undergo an initial eye examination to ensure that the surgery is the right option. Detailed instructions will be given, including how to prepare for the surgery day.</p>
+          </div>
+        </div>
+  
+        <!-- Step 2: Surgery Process -->
+        <div class="step-card">
+          <img src="https://images.unsplash.com/photo-1612896943789-6eec80a93d0d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Surgery Process">
+          <div class="step-info">
+            <h3>Step 2: Surgery Process</h3>
+            <p>The surgeon will make a small incision in the eye to remove the clouded lens, replacing it with a customized intraocular lens.</p>
+          </div>
+        </div>
+  
+        <!-- Step 3: Post-Surgery Recovery -->
+        <div class="step-card">
+          <img src="https://images.unsplash.com/photo-1580281657521-68d0fd7d55c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Post-Surgery Recovery">
+          <div class="step-info">
+            <h3>Step 3: Post-Surgery Recovery</h3>
+            <p>Patients will receive post-operative instructions to ensure a quick recovery. Follow-up visits are necessary to monitor healing and ensure optimal vision results.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
     
 
     <!-- Service Procedures Section -->
