--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#gallery">gallery</a>
       <a href="#doctors">doctors</a>
       <a href="#about">about</a>
-      <a href="#service">services</a>
+      <a href="#our-services">services</a>
       <a href="#contact">contact</a>
       <a href="#review">reviews</a>
       <a href="#timings">timings</a>
@@ -52,12 +52,62 @@
             <a href="#contact" style="z-index: 99" class="contact-btn">Contact us <span
                 class="fas fa-chevron-right"></span>
             </a>
+            <a href="javascript:void(0);" style="z-index: 99; margin-left: 12px;" class="contact-btn" id="book-now-btn">
+              Book Now 
+              <span class="fas fa-calendar-alt"></span>
+            </a>
           </div>
         </div>
       </div>
     </div>
 
   </section>
+
+
+ 
+  
+  <!-- Pop-up Booking Form -->
+  <div id="booking-popup" class="popup">
+    <div class="popup-content">
+      <span class="close-btn">&times;</span>
+      <h2 style="font-size: 2.5rem;">Book an Appointment</h2>
+      <form action="#" method="POST">
+        <!-- <label for="name">Full Name</label> -->
+        <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+  
+        <!-- <label for="email">Email</label> -->
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+        <input type="number" id="number" placeholder="Contact Number">
+
+  
+        <!-- <label for="date">Preferred Date</label> -->
+        <input type="date" id="date" name="date" required>
+  
+        <!-- <label for="time">Preferred Time</label> -->
+        <!-- <input type="time" id="time" name="time" required> -->
+  
+        <!-- <label for="service">Select Service</label> -->
+        <select id="service" name="service">
+          <option value="eye-test">Eye Test</option>
+          <option value="cataract-surgery">Cataract Surgery</option>
+          <option value="laser-treatment">Laser Treatment</option>
+        </select>
+  
+        <button type="submit" class="submit-btn">Book Now</button>
+      </form>
+    </div>
+  </div>
+  
+
+
+
+
+
+
+
+
+
   <!-- gallery section -->
   <section class="gallery" id="gallery">
     <h1 class="heading">Gallery</h1>
@@ -120,6 +170,9 @@
       </div>
     </div>
   </section>
+
+
+
   <section class="about" id="about" >
     <h1 class="heading"><span>About</span> Us</h1>
     <div class="row">
@@ -128,6 +181,7 @@
       </div>
 
       <div class="content">
+
         <p>
           nalanda netralaya is a leading eye care cneter in nalanda district,
           known for its top-quality services and caring approach. our hospital
@@ -164,11 +218,7 @@
   <section class="services light-bg" id="services">
     <div class="box-container">
       <div class="box" style="grid-row-start: 1; grid-row-end: 3">
-        <h3>Accessibility</h3>
-        <p>Wheelchair-accessible car park</p>
-        <p>Wheelchair-accessible entrance</p>
-        <p>Wheelchair-accessible seating</p>
-        <p>Wheelchair-accessible toilet</p>
+        
 
         <h3>Planning</h3>
         <p>Accepts new patients</p>
@@ -311,7 +361,14 @@
       <img src="./img/contact-us.webp" alt="" />
     </div>
   </section>
-  <section class="light-bg">
+
+
+
+<!-- services section start -->
+
+
+
+  <section class="light-bg" id="our-services">
     <h1 class="heading">our <span>services</span></h1>
     <section class="icons-container">
       <div class="icons">
@@ -400,6 +457,11 @@
       </div>
     </section>
   </section>
+
+<!-- end service section -->
+
+
+
   <section class="book " id="book">
     <h1 class="heading"><span>book</span>now</h1>
     <div class="row">
@@ -462,39 +524,7 @@
         </p>
       </details>
       <hr />
-      <details>
-        <summary>Pharmacy</summary>
-        <p>
-          An area where medications are prepared, dispensed, and managed,
-          often including inpatient and outpatient pharmacy services.
-        </p>
-      </details>
-      <hr />
-      <details>
-        <summary>Intensive Care Unit (ICU)</summary>
-        <p>
-          Specialized units for critically ill patients requiring close
-          monitoring and advanced medical care.
-        </p>
-      </details>
-      <hr />
-      <details>
-        <summary>Rehabilitation Facilities</summary>
-        <p>
-          Spaces for physical therapy, occupational therapy, speech therapy,
-          and other forms of rehabilitation to help patients recover and
-          regain function.
-        </p>
-      </details>
-      <hr />
-      <details>
-        <summary>Maternity Ward</summary>
-        <p>
-          Facilities for prenatal care, labor and delivery, postpartum care,
-          and neonatal intensive care for newborns.
-        </p>
-      </details>
-      <hr />
+      
       <details>
         <summary>Cafeteria/Cafes</summary>
         <p>
@@ -560,6 +590,59 @@
   <!--review section ends-->
   <!--blops section starts-->
   <!--blogs section ends-->
+
+
+
+  <section id="faq" class="faq-section">
+    <h2 class="heading">Faq</h2>
+    <div class="faq-container">
+      <div class="faq-item">
+        <button class="faq-question">
+          What services does the hospital offer?
+          <span class="toggle-icon">></span>
+        </button>
+        <div class="faq-answer">
+          <p>Our hospital provides a wide range of services including eye care, cardiology, orthopedic services, emergency care, and more.</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">
+          What are the hospital's visiting hours?
+          <span class="toggle-icon">></span>
+        </button>
+        <div class="faq-answer">
+          <p>Visiting hours are from 10 AM to 6 PM, Monday through Saturday. Please check with the hospital for holiday timings.</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">
+          Do I need an appointment for a consultation?
+          <span class="toggle-icon">></span>
+        </button>
+        <div class="faq-answer">
+          <p>Yes, we recommend booking an appointment to ensure the availability of our specialists. You can book online or call us directly.</p>
+        </div>
+      </div>
+  
+      <div class="faq-item">
+        <button class="faq-question">
+          What insurance plans do you accept?
+          <span class="toggle-icon">></span>
+        </button>
+        <div class="faq-answer">
+          <p>We accept most major insurance plans. Please contact our billing department to confirm your specific insurance provider.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+
+
+
+
   <!--footer section starts-->
   <section class="footer">
     <div class="box-container">
