Your commit message

--- a/index.html
+++ b/index.html
@@ -339,6 +339,60 @@
       </li>
     </ul>
   </section>
+
+
+<!-- Ayushman card section -->
+
+<section id="ayushman-card" class="ayushman-section">
+
+  <h2 class="heading">Ayushman Bharat Card</h2>
+  <div class="container">
+    <p>
+      At Nalanda Netralaya, we are proud to offer surgeries through the Ayushman Bharat Yojana,
+      providing financial protection and quality eye care for those in need.
+    </p>
+
+    <div class="benefits">
+      <h3 class="sub-head">Eligibility and Benefits</h3>
+      <ul>
+        <li>Free surgeries for eye conditions like cataract, glaucoma, and more.</li>
+        <li>Cashless treatments for eligible beneficiaries.</li>
+        <li>Access to state-of-the-art surgical facilities.</li>
+      </ul>
+    </div>
+
+    <div class="services">
+      <h3 class="sub-head">Covered Surgeries and Treatments:</h3>
+      <ul>
+        <li>Cataract Surgery (Phacoemulsification)</li>
+        <li>Intraocular Lens Implantation</li>
+        <li>Glaucoma Surgery</li>
+        <li>Retinal Detachment Surgery</li>
+        <li>Diabetic Retinopathy Treatment</li>
+        <li>Corneal Transplants</li>
+        <li>Laser Eye Surgery for Vision Correction</li>
+      </ul>
+    </div>
+
+    <div class="how-to-avail">
+      <h3 class="sub-head">How to Avail Services:</h3>
+      <ol>
+        <li>Check your eligibility through the Ayushman Bharat portal or CSC.</li>
+        <li>Visit Nalanda Netralaya with your Ayushman Bharat card and ID.</li>
+        <li>Our team will guide you through the process for cashless surgery.</li>
+      </ol>
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+<!-- end of Ayushman card section -->
+
   <section id="contact" class="contact-us-section">
     <div>
       <article>
