--- a/services/service1.html
+++ b/services/service1.html
@@ -265,17 +265,18 @@
    <script >
     let menu = document.querySelector('#menu-btn');
     let navbar = document.querySelector('.navbar');
-
+    let header = document.querySelector('.header');
+    
     menu.onclick = () => {
-    menu.classList.toggle('fa-times');
-    navbar.classList.toggle('active');
+        menu.classList.toggle('fa-times');
+        navbar.classList.toggle('active');
     }
-
-window.onscroll = () => {
-    menu.classList.remove('fa-times');
-    navbar.classList.remove('active');
-}
-
+    
+    window.onscroll = () => {
+        menu.classList.remove('fa-times');
+        navbar.classList.remove('active');
+        header.classList.add('active');
+    }
 
  const navLinks = document.querySelectorAll('.nav-link');
 
