--- a/index.html
+++ b/index.html
@@ -489,10 +489,10 @@
         <i class="fas fa-child"></i>
         <p>Pediatric Ophthalmology</p>
       </div>
-      <div class="icons">
+      <!-- <div class="icons">
         <i class="fas fa-user-md"></i>
         <p>Oculoplastic Surgery</p>
-      </div>
+      </div> -->
       <div class="icons">
         <i class="fas fa-user-md"></i>
         <p>Low Vision Rehabilitation</p>
