--- a/services/service1.html
+++ b/services/service1.html
@@ -37,9 +37,9 @@
        <!-- Main Section -->
   <main>
     <section class="service-hero">
-      <h1 class="heading">Computerised Eye Testing Service</h1>
+      <h1 class="heading" >Computerised Eye Testing Service</h1>
       <p>Eye Testing Service at Nalanda Netralaya provides precise, non-invasive eye exams using advanced technology for accurate diagnosis and care.</p>
-      <img src="https://img.freepik.com/free-photo/medium-shot-woman-getting-her-eyes-checked_23-2150801430.jpg?t=st=1725690796~exp=1725694396~hmac=70c57de1c8a3c61b583cda1bd44965dfc586d289abffc4d587c87629a4d6b992&w=996" alt="Cardiology Department">
+      <img src="https://media.istockphoto.com/id/1189362136/photo/eye-doctor-with-female-patient-during-an-examination-in-modern-clinic.jpg?s=612x612&w=0&k=20&c=jubMfA5uM3Boue5TtzGnBjdpZgo7AD8URPvjwh21KTA=" alt="Cardiology Department">
     </section>
 
     <!-- Service Details Section -->
