--- a/services/service2.html
+++ b/services/service2.html
@@ -39,7 +39,7 @@
     <section class="service-hero">
       <h1 class="heading">Intraocular lens implantation</h1>
       <p>"Intraocular Lens Implantation is a revolutionary procedure that restores clear vision by replacing the eye's natural lens with an artificial one."</p>
-      <img src="https://img.freepik.com/free-photo/man-holding-eye-contact_23-2148696716.jpg?t=st=1725869759~exp=1725873359~hmac=2a605a925ad22d3970cac64c8a4af14677aac756f1d8277034f29d59735e0f6c&w=1060" alt="Cardiology Department">
+      <img src="https://t3.ftcdn.net/jpg/08/28/89/46/240_F_828894675_kpL6bGzTnrDksVsBMsMsXIzT55pYnkC2.jpg" alt="Cardiology Department">
     </section>
 </main>
 
